--- a/arabic/arabic.org
+++ b/arabic/arabic.org
@@ -29,11 +29,11 @@
     - [[https://minerva-books.com/product/arabic-hebrew-complete-dictionary/][המלון הערבי־עברי]]: ספר נפלא. כריכה קשה, הדפוס מודרני, הרבה יותר קריא וברור. מלון שימושי מאד.
     - החוברות [[https://minerva-books.com/product/%d7%9c%d7%93%d7%91%d7%a8-%d7%a2%d7%a8%d7%91%d7%99%d7%aa-%d7%a7%d7%95%d7%a8%d7%a1-%d7%9c%d7%9c%d7%99%d7%9e%d7%95%d7%93-%d7%a2%d7%a6%d7%9e%d7%99/][לדבר ערבית]]: החוברות קריאות מאד. אבל אני מעדיף ספרי לימוד קצת יותר פורמאליים, כלומר לא רק עם דיאלוגים ורשימות מלים, אלא עם קצת יותר הסברים דקדוקיים.
 - המלון האטימולוגי לערבית מדוברת ולעברית מאת *אברהם שטאל* (כריכה קשה, שני כרכים): זה המלון השימושי ביותר שיש לי לערבית מדוברת. מפורט מאד, כולל המוני מלים ודוגמאות. כבר לא בדפוס, אבל אפשר עדיין למצוא אותו בחנויות לספרים משומשים. אין בו את כל העושר שיש במילונים של אליחי, שנותן הרבה מלים נרדפות, ובכל זאת, יש לו הוא מכסה תחומים שאליחי לא נכנס אליהם, ואוצר המלים עדכני יותר וגדול מאד.
+- הלקסיקון הלבנוני־אנגלי של רוג'ר מכלוף ({{{latin(Roger Makhlouf)}}}). הלקסיקון באנגלית, משתמש בתעתיק יחודי עם אותיות שאינן מופיעות באף שפה — מן אותיות שמורכבות מחלקי אותיות לטיניות. תעתיק יחודי שלא דומה לאלפבית הפונטי {{{latin(IPA)}}}, שלא מבוסס על צורות תעתיק מוכרות, שדורש למוד במיוחד, שלא ישרת את הלומדים בקונטקסט אחר. זו בעיה גדולה, משום שמילונים לעגה הלבנונית מעטים ודלים, ודווקא המלון הזה מכיל הרבה מלים מעניינות ששווה להכיר. מצער מאד שהכותב לא הוסיף *גם* את הכתיב באותיות ערביות. אם הקוראים לא יוסיפו את הכתיב בערבית ליד כל ערך, כל המלון הזה יהיה חסר ערך… 
 
 ** מלונים מקוונים
 - [[https://milon.madrasafree.com/][המלון המקוון של *מדרסה* לערבית מדוברת]]. המלון פותח, מומש, ותוחזק על ידי [[https://rothfarb.info/][*רונן רוטפרב*]]. לאחר שנים שבהן ניהל את הפרוייקט לבדו, רונן העביר את הפרוייקט [[https://madrasafree.com/][לבית הספר *מדרסה* לערבית]], ואלו מתחזקים אותו כעת.
 - [[https://www.livingarabic.com/en][פרוייקט /{{{latin(Living Arabic)}}}/, {{{naskh(لُغَتُنَا)}}}]], על־ידי [[https://www.patreon.com/user?u=80648765][*חוסאם אבוזאהר*]]. הפרוייקט הזה כולל ערבית ספרותית, וגם להגים שונים של ערבית מדוברת. הפרוייקט חי, מתפתח, וכל הזמן נוספים לו חומרים חדשים. המלון כולל דוגמאות רבות לשימוש במלים בלהגים השונים. 
-
 ** תרגומים אינטרלינאריים
 * הכתב הערבי
 ** הסדר המלוני
@@ -46,14 +46,14 @@
 ** Timeline
 *** <2023-09-27 Wed>
 
-כדי להבין אמרה לבנונית, צריך לעשות סדר במונחים של קבוצות דתיות שונות:
+כדי להבין את האמרה הלבנונית הבאה, צריך לעשות סדר במונחים של קבוצות דתיות שונות:
 - {{{naskh(كتوليك)}}}: יוונים קתולים המקיימים את הריטוּס הביזנטי
 - {{{naskh(اللّاتين)}}}: קתולים המקיימים את הריטוּס הרומי־לטיני
 - {{{naskh(الرّوم)}}}: יוונים אורתודוקסים
 
 כעת ניתן להבין אמרה לבנונית מהמלון של אניס פרחה ({{{naskh(انيس فريحة)}}}):
 
-{{{naskh(إن كانِ الكنافِة بيدخلها توم، الموراني بحبّ الرُّوم.)}}}
+{{{naskh(إن كانِ الكْنافِة بيدْخَلْها توم، الموراني بَحُبّ الرُّوم.)}}}
 
 «אם [כמו ש…] הכנאפה נכנס לתוכה שום, [ככה] המרונים אוהבים את היוונים־אורתודוקסים.»
 
@@ -83,4 +83,4 @@
 
 למדתי להקליד את התנועות הקצרות (ניקוד, {{{naskh(حَرَكات)}}}) במקלדת הערבית הסטנדרטית. 
 
-* {{{hebrew(ערבית ספרותית)}}}, {{{latin(MSA)}}}, {{{ruqaa(فصحة)}}}
+* ערבית ספרותית, {{{latin(MSA)}}}, {{{ruqaa(فصحة)}}}
