--- a/index.org
+++ b/index.org
@@ -19,8 +19,8 @@ regardless of whether or not it made money for anybody?
 - *Email:* [[mailto:gmayer@little-lisper.org][gmayer@little-lisper.org]]. All email, from all other accounts,
   gets forwarded to this account.
 - *Office:* Building 37 (Alon, {{{rtl(אלון)}}}) room 106, mailbox 44
-- *Office hours* (for the *Summer Semester, 2023*, currently *only* on [[https://zoom.us/][/Zoom/]] only:
-  - For the [[./tc.html][/Teaching Committee/ ({{{rtl(ועדת הוראה\, שנים ב–ד)}}})]]: Mondays, 17-19
+- *Office hours* (for the *Summer Semester, 2024*, currently *only* on [[https://us02web.zoom.us/j/87582638669?pwd=SVFVOFdvYlQ0enkyZ0s5NEM0ODNYQT09][Zoom/]] only:
+  - For the [[./tc.html][/Teaching Committee/ ({{{rtl(ועדת הוראה\, שנים ב–ד)}}})]]: Mondays, 13-15
 - *Telephones:* Voice (+972)(0)8-647-7873, FAX (+972)(0)8-647-7650
 - *Professional mailing address:* [[mailto:gmayer@little-lisper.org][Mayer Goldberg]], [[http://www.cs.bgu.ac.il/][Department of Computer
   Science]], [[http://www.bgu.ac.il/][Ben Gurion University]], PO Box 653, Be'er Sheva 84105,
@@ -46,6 +46,8 @@ regardless of whether or not it made money for anybody?
 - [[./tc.html][/The Unergraduate Teaching Committee/]] for years 2--4 ({{{rtl(ועדת הוראה\, שנים ב–ד)}}})
 * Personal interests
 - [[./languages.html][Learning languages]]
+- [[./prog-langs.html][Learning programming languages]]
+- Calculators & various [historical] computing devices
 * /This website has a seriously drab look, that was outdated already back in the 1990's...!/
 
 - While the look /is/ drab, mainly because I know very little about graphical design
