--- a/arabic/arabic.org
+++ b/arabic/arabic.org
@@ -51,7 +51,7 @@
 - {{{naskh(اللّاتين)}}}: קתולים המקיימים את הריטוּס הרומי־לטיני
 - {{{naskh(الرّوم)}}}: יוונים אורתודוקסים
 
-כעת ניתן להבין אמרה לבנונית מהמלון של אניס פרחה ({{{naskh(انيس فريحة)}}}):
+כעת ניתן להבין אמרה לבנונית מהמלון של אניס פריחה ({{{naskh(انيس فريحة)}}}):
 
 {{{naskh(إن كانِ الكْنافِة بيدْخَلْها توم، الموراني بَحُبّ الرُّوم.)}}}
 
