--- a/arabic/arabic.org
+++ b/arabic/arabic.org
@@ -44,6 +44,15 @@
 ערבית מדוברת של המזרח הקרוב היא אוסף של להגים המדוברים באיזור שהיסטורית נקרא בשם *סוריה הגדולה*, או שָׁאם ({{{naskh(شام)}}}). האיזור כולל את לבנון, סוריה, ירדן, ישראל, הגדה המערבית, ורצועת עזה. מבחינה היסטורית, *סוריה הגדולה* כוללת גם את עיראק, אבל ערבית מדוברת עיראקית שונה מאד משאר הלהגים של *סוריה הגדולה*, וכולל השפעות רבות מפרסית ותורכית, ולכן מקובל שלא לכלול אותו בלהגים של *סוריה הגדולה*, אלא להתייחס אליו כלהג נפרד.
 
 ** Timeline
+*** <2024-08-26 Mon>
+
+איך קונים ספרים בערבית? 
+
+- בחנויות מסויימות של סטימצקי וצומת ספרים ניתן למצוא כמה מדפי ספרים בערבית… אבל מי שמגיע עם רשימות מוכנות צריך מקורות טובים יותר. 
+- יש חנויות ספרים בישובים מעורבים או ערביים (חיפה, נצרת, אום אלפאחם, וכו').
+- יש חנויות ספרים מקוונות שמתמחות בספרים מכל העולם הערבי. יכול להיות מסובך לעבוד איתן, משום שרבות מהן לא תשלחנה ספרים ארצה. יש חברות ישראליות שנותנות לכם כתובת בארה"ב או באירופה, ואתם יכולים לרכוש ספרים ולשלוח אותם לכתובת שנתנו לכם… משם כבר תשלמו לחברה ישראלית להביא את הספרים ארצה. היתה לי חוויה קשה עם חברה כזו: ספרים מסוריה ומלבנון, שלקח להם חודש להגיע לארה"ב, לקח לחברה ישראלית שלושה וחצי חודשים (!) להביא ארצה, וזה בזמן שישראל מפציצה לעיתים תכופות את שדה התעופה של דמשק, ומשבשת את הקליטה של לווייני ה־GPS במזרח התיכון, על מנת שבמקום שכל הדרכים תובלנה לרומא, הן תובלנה, לפחות באפליקציות הניווט, לנמל התעופה על־שם רפיק אל־חרירי בביירות… הזמן והעלויות של חבילות ספרים באופן הזה לא הופכות את האופציה לאטרקטיבית.
+- חנויות בגדה (חברון, שכם, וכו'). אם יש לכם חברים ערבים שנוסעים לערים בגדה, אפשר לבקש שיביאו לכם. הם מביאים המוני ספרים מכל העולם הערבי, דרך ירדן. מחירי הספרים זולים מאד. 
+
 *** <2023-09-27 Wed>
 
 כדי להבין את האמרה הלבנונית הבאה, צריך לעשות סדר במונחים של קבוצות דתיות שונות:
