--- a/languages.org
+++ b/languages.org
@@ -26,5 +26,5 @@
 - Hindi
 - Sanskrit
 - Tibetan
-* Interlinear Translations I Prepared
-- [[./psalter.html][A quadrilingual Psalter]]
+* [[./interlinear.html][Interlinear Translations I Prepared]]
+
