--- a/index.org
+++ b/index.org
@@ -20,7 +20,7 @@ regardless of whether or not it made money for anybody?
   gets forwarded to this account.
 - *Office:* Building 37 (Alon, {{{rtl(אלון)}}}) room 106, mailbox 44
 - *Office hours* (for the *Summer Semester, 2024*, currently *only* on [[https://us02web.zoom.us/j/87582638669?pwd=SVFVOFdvYlQ0enkyZ0s5NEM0ODNYQT09][Zoom]] only:
-  - For the [[./tc.html][/Teaching Committee/ ({{{rtl(ועדת הוראה\, שנים ב–ד)}}})]]: Mondays, 13-15
+  - For the [[./tc.html][/Teaching Committee/ ({{{rtl(ועדת הוראה\, אחראי על שנה א')}}})]]: Mondays, 13-15
 - *Telephones:* Voice (+972)(0)8-647-7873, FAX (+972)(0)8-647-7650
 - *Professional mailing address:* [[mailto:gmayer@little-lisper.org][Mayer Goldberg]], [[http://www.cs.bgu.ac.il/][Department of Computer
   Science]], [[http://www.bgu.ac.il/][Ben Gurion University]], PO Box 653, Be'er Sheva 84105,
