--- a/interlinear.org
+++ b/interlinear.org
@@ -7,6 +7,8 @@
 
 * My interlinear translations
 ** Arabic
-- [[~/work/website/arabic-interlinear-translations/al-haiba-theme-song=majbour.pdf][Majbour]]: The theme song from the Lebanese series Al Haiba
+- [[./arabic-interlinear-translations/mashrou-leila-rakset-leilah.pdf][Raksit Leila, by Mashrou Leila]]
+- [[./arabic-interlinear-translations/mashrou-leila-fasateen.pdf][Fasateen, by Mashrou Leila]]
+- [[./arabic-interlinear-translations/al-haiba-theme-song=majbour.pdf][Majbour]]: The theme song from the Lebanese series Al Haiba
 ** Latin
 - [[./psalter.html][A quadrilingual Psalter]]
