--- a/tc.org
+++ b/tc.org
@@ -10,6 +10,19 @@
 #+end_export
 
 * תקציר
+** במה ועדת הוראה מטפלת
+- בקשות למועדים מיוחדים
+- חריגות מנהלי האוניברסיטה בכל הנוגע לקורסים ולהתנהלות המרצים
+- סיוע לתלמידים בבניה של תוכניות לימודים ופרישׂת התואר
+- הפניה של תלמידים שנתקלים בקשיים שונים במסגרת לימודיהם לגורמים המוסמכים לסייע להם (לרוב בדיקנט הסטודנטים)
+- טיפול בבעיות טכניות שעלו בביצוע הבחינות (מול מדור בחינות וסגל הקורס)
+** במה ועדת הוראה אינה מטפלת
+- ועדת הוראה *איננה מתפקדת כמרצה־על בקורסים השונים*, ואיננה יכולה להחליף את המרצים בקורסים. אנחנו לא יכולים לטפל ב־
+  - תלונות לגבי קושי של שאלות בבחינה או שעורי בית
+  - תלונות לגבי רמת הבדיקה של שאלות בבחינה או שעורי בית
+  - ערעורים על החלטות לגיטימיות של מרצים בקורסים שלהם
+** דוגמאות
+
 * למי לפנות
 ועדת הוראה כוללת חברי סגל שונים, וכל אחד מטפל בנושאים שונים. על מנת לזרז את הטיפול בפניה שלכם ולא להטריד אנשים שלא יכולים לסייע לכם, אנא ודאו שאתם פונים לאנשים הנכונים:
 - אם אתם מילואימניקים, אם שרתתם בכוחות הביטחון במלחמה האחרונה, אם אתם נפגעים או מפונים או מטפלים בבני משפחה מקרבה ראשונה שהם נפגעים או מפונים, פנו בבקשה ל[[https://omriazencot.com/][עמרי אייזנקוט]]
@@ -35,7 +48,9 @@
   - נציג ועדת הוראה (אני) הוא *רק חוליה אחת* בטיפול בבקשה שלכם
   - פניה דרך [[https://cs-sr.cs.bgu.ac.il/][מערכת הפניות לוועדת הוראה]] מבטיחה שכל הגורמים הרלוונטיים יטפלו בפניה שלכם, לפי הסדר
   - אם בכל זאת תפנו אלי באופן אישי, אני אפנה אתכם ל[[https://cs-sr.cs.bgu.ac.il/][מערכת הפניות לוועדת הוראה]], כדי להבטיח שהטיפול יהיה נכון
+- אם אתם מעוניינים ללמוד בחו"ל במסגרת התוכנית לחילופי סטודנטים, עליכם לפנות ל[[https://www.bgu.ac.il/general/studies-abroad/][טופס הממוחשב לחילופי סטודנטים]] בפורטל הסטודנטיאלי שבאתר האוניברסיטה
+  - נציג ועדת הוראה (אני) הוא *רק חוליה אחת* בטיפול בבקשה שלכם
+  - עליכם לפנות באמצעות ה[[https://www.bgu.ac.il/general/studies-abroad/][טופס הממוחשב לחילופי סטודנטים]] על מנת להבטיח שכל הגורמים הרלוונטיים יראו את הפניה שלכם, וכל אחד יבצע את החלק שלו בטיפול
 - בכל נושא אחר, הדרך המועדפת לפנות אלי היא ב[[mailto:gmayer@little-lisper.org][דוא"ל]], *בצירוף שם מלא, מספר תעודת זהות, מספר טלפון, וכל המסמכים והראיות המבססים את טענותיכם*
 - אתם יכולים לפנות למספר הטלפון הסלולארי שלי בוואצאפ, בכל שעה משעות היום. הטלפון "על שקט", ואני אענה לכם כשאתפנה. בכל מקרה, *נא לציין שם מלא ומספר תעודת זהות*
 - החלטות מתקבלות לאחר שיקול דעת, בדיקת הנסיבות והראיות, והתייעצות עם אנשים נוספים, כולל חברים אחרים בועדת הוראה וגורמים שונים בהנהלת המחלקה. שום החלטה לא תתקבל "במקום", באופן פרונטלי או בשעות הקבלה, ללא קשר למה שתאמרו
-- 
