--- a/tc.org
+++ b/tc.org
@@ -9,20 +9,6 @@
 <script src="hebrew-support/gmayer-org-mode-web.js"></script>
 #+end_export
 
-* תקציר
-** במה ועדת הוראה מטפלת
-- בקשות למועדים מיוחדים
-- חריגות מנהלי האוניברסיטה בכל הנוגע לקורסים ולהתנהלות המרצים
-- סיוע לתלמידים בבניה של תוכניות לימודים ופרישׂת התואר
-- הפניה של תלמידים שנתקלים בקשיים שונים במסגרת לימודיהם לגורמים המוסמכים לסייע להם (לרוב בדיקנט הסטודנטים)
-- טיפול בבעיות טכניות שעלו בביצוע הבחינות (מול מדור בחינות וסגל הקורס)
-** במה ועדת הוראה אינה מטפלת
-- ועדת הוראה *איננה מתפקדת כמרצה־על בקורסים השונים*, ואיננה יכולה להחליף את המרצים בקורסים. אנחנו לא יכולים לטפל ב־
-  - תלונות לגבי קושי של שאלות בבחינה או שעורי בית
-  - תלונות לגבי רמת הבדיקה של שאלות בבחינה או שעורי בית
-  - ערעורים על החלטות לגיטימיות של מרצים בקורסים שלהם
-** דוגמאות
-
 * למי לפנות
 ועדת הוראה כוללת חברי סגל שונים, וכל אחד מטפל בנושאים שונים. על מנת לזרז את הטיפול בפניה שלכם ולא להטריד אנשים שלא יכולים לסייע לכם, אנא ודאו שאתם פונים לאנשים הנכונים:
 - אם אתם מילואימניקים, אם שרתתם בכוחות הביטחון במלחמה האחרונה, אם אתם נפגעים או מפונים או מטפלים בבני משפחה מקרבה ראשונה שהם נפגעים או מפונים, פנו בבקשה ל[[https://omriazencot.com/][עמרי אייזנקוט]]
@@ -40,8 +26,39 @@
 | קישור לזום | [[https://us02web.zoom.us/j/86309317409?pwd=jHoMQ3Ec3xE35eLLPF5tuagZl7Swsm.1][שעות הקבלה בזום בלבד!]]                      |
 | טלפון     | 055-6603392 (וואצאפ), 08-647-7873 (משרד) |
 
+* תקציר
+** מול התלמידים
+*** במה ועדת הוראה מטפלת
+- בקשות למועדים מיוחדים
+- חריגות מנהלי האוניברסיטה בכל הנוגע לקורסים ולהתנהלות המרצים
+- סיוע לתלמידים בבניה של תוכניות לימודים ופרישׂת התואר
+- הפניה של תלמידים שנתקלים בקשיים שונים במסגרת לימודיהם לגורמים המוסמכים לסייע להם (לרוב בדיקנט הסטודנטים)
+- טיפול בבעיות טכניות שעלו בביצוע הבחינות (מול מדור בחינות וסגל הקורס)
+*** במה ועדת הוראה אינה מטפלת
+- ועדת הוראה *איננה מתפקדת כמרצה־על בקורסים השונים*, ואיננה יכולה להחליף את המרצים בקורסים. אנחנו לא יכולים לטפל ב־
+  - תלונות לגבי קושי של שאלות בבחינה או שעורי בית
+  - תלונות לגבי רמת הבדיקה של שאלות בבחינה או שעורי בית
+  - ערעורים על החלטות לגיטימיות של מרצים בקורסים שלהם
+*** דוגמאות
+- ערערתם על בדיקת שאלה בבחינה, המרצה דחה את הערעור שלכם ☜ זה לא נושא לועדת הוראה
+- המרצה לא הופיע לשעות הקבלה שלו ☜ זה נושא לועדת הוראה
+- לדעתכם הציון בבחינה/בקורס לא משקפת את ידיעותיכם ☜ זה לא נושא לועדת הוראה
+- המרצה דחה את הערעור שלכם מבלי לנמק ☜ זה נושא לועדת הוראה
+- המרצה הוריד "יותר מדי" נקודות בשאלה מסויימת ☜ זה לא נושא לועדת הוראה
+- המרצה שינה את הסילאבוס של הקורס לאחר סוף תקופת השינויים ☜ זה [עשוי להיות] נושא לועדת הוראה
+- הממוצע בקורס השנה שונה מן הממוצע בשנים קודמות ☜ זה לא נושא לועדת הוראה
+- אף אחד מסגל הקורס לא נכנס לחדר הבחינה או אסף פתקי השגות/הבהרות בבחינה ☜ זה נושא לועדת הוראה
+- הקורס השנה שונה מהקורס בשנים קודמות ☜ זה לא נושא לועדת הוראה
+- תיקונים/הבהרות לטופס הבחינה נכתבו בחלק מכתות הבחינה אבל לא בכולן ☜ זה נושא לועדת הוראה
+** מול התוכנית, הפקולטה, והאוניברסיטה
+- החלטות מעבר ("הפסקות לימודים")
+- קביעת תוכניות לימודים לתלמידים במצב אקדמי לא־תקין
+- טיפול בבקשות למועדים מיוחדים
+- טיפול בבקשות לחילופי סטודנטים
+וכולי
+
 * נהלים
-- שעות הקבלה לועדת הוראה הן בזום בלבד! במקרים חריגים ניתן לקבוע שעות קבלה מיוחדות, אבל *אין שעות קבלה פרונטליות לועדת הוראה*
+- שעות הקבלה לועדת הוראה הן בזום בלבד! במקרים חריגים ניתן לקבוע שעות קבלה מיוחדות, אבל גם הן תתקיימנה בזום או בטלפון. *אין שעות קבלה פרונטליות לועדת הוראה*
 - מיד בתום שעות הקבלה בזום, יש לי שעות קבלה עבור הקורס שאני מלמד (עקרונות הקומפילציה). *שעות הקבלה לקורסים שלי הם פרונטליים*
 - אם אתם מבקשים מועד מיוחד, חשוב שתפנו אלי באמצעות [[https://cs-sr.cs.bgu.ac.il/][מערכת הפניות לוועדת הוראה]]
   - גורמים שונים מטפלים בבקשות למועדים מיוחדים (המחלקה, הפקולטה, מדור בחינות, ולפעמים גם דיקנט הסטודנטים)
