--- a/tc.org
+++ b/tc.org
@@ -32,7 +32,7 @@
 - בקשות למועדים מיוחדים
 - חריגות מנהלי האוניברסיטה בכל הנוגע לקורסים ולהתנהלות המרצים
 - סיוע לתלמידים בבניה של תוכניות לימודים ופרישׂת התואר
-- הפניה של תלמידים שנתקלים בקשיים שונים במסגרת לימודיהם לגורמים המוסמכים לסייע להם (לרוב בדיקנט הסטודנטים)
+- סיוע תלמידים שנתקלים בקשיים שונים במסגרת לימודיהם, והפנייתם לגורמים המוסמכים לסייע להם (לרוב בדיקנט הסטודנטים)
 - טיפול בבעיות טכניות שעלו בביצוע הבחינות (מול מדור בחינות וסגל הקורס)
 *** במה ועדת הוראה אינה מטפלת
 - ועדת הוראה *איננה מתפקדת כמרצה־על בקורסים השונים*, ואיננה יכולה להחליף את המרצים בקורסים. אנחנו לא יכולים לטפל ב־
@@ -65,6 +65,7 @@
   - נציג ועדת הוראה (אני) הוא *רק חוליה אחת* בטיפול בבקשה שלכם
   - פניה דרך [[https://cs-sr.cs.bgu.ac.il/][מערכת הפניות לוועדת הוראה]] מבטיחה שכל הגורמים הרלוונטיים יטפלו בפניה שלכם, לפי הסדר
   - אם בכל זאת תפנו אלי באופן אישי, אני אפנה אתכם ל[[https://cs-sr.cs.bgu.ac.il/][מערכת הפניות לוועדת הוראה]], כדי להבטיח שהטיפול יהיה נכון
+  - הטיפול בבקשה למועד מיוחד מתבצע מול [[https://in.bgu.ac.il/acadsec/DocLib2/exams.pdf][נוהל הבחינות האוניברסיטאי]] ומול פירוט ותיעוד הנסיבות המיוחדות של התלמיד. נכונותו או חוסר־נכונותו של המרצה לתת מועד מיוחד אינן מהוות שיקול לשאלת הזכאות למועד מיוחד. לכן אל נא תפנו למרצים בנושא, אלא הגישו פניה באמצעות [[https://cs-sr.cs.bgu.ac.il/][מערכת הפניות לוועדת הוראה]]
 - אם אתם מעוניינים ללמוד בחו"ל במסגרת התוכנית לחילופי סטודנטים, עליכם לפנות ל[[https://www.bgu.ac.il/general/studies-abroad/][טופס הממוחשב לחילופי סטודנטים]] בפורטל הסטודנטיאלי שבאתר האוניברסיטה
   - נציג ועדת הוראה (אני) הוא *רק חוליה אחת* בטיפול בבקשה שלכם
   - עליכם לפנות באמצעות ה[[https://www.bgu.ac.il/general/studies-abroad/][טופס הממוחשב לחילופי סטודנטים]] על מנת להבטיח שכל הגורמים הרלוונטיים יראו את הפניה שלכם, וכל אחד יבצע את החלק שלו בטיפול
